# libsigcplusplus

./: meson.build
sigc++/: meson.build
